# fastapi-template

./: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  main.py
backend/src/: config.py
bot/: Dockerfile  main.py
