[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.0",
    "fastapi[standard]>=0.127.0",
    "kafka>=1.3.5",
    "redis>=7.1.0",
    "aiogram>=3.0.0",
    "alembic>=1.13.0",
    "uvicorn>=0.40.0",
]
